Bug 300527 - Okteta fails tests
Summary: Okteta fails tests
Status: RESOLVED FIXED
Alias: None
Product: okteta
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Friedrich W. H. Kossebau
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-05-23 20:35 UTC by stupor_scurvy343
Modified: 2016-01-20 10:24 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
LastTest.log (139.61 KB, text/plain)
2012-05-23 20:36 UTC, stupor_scurvy343
Details
LastTest.log (79.52 KB, text/plain)
2012-11-18 14:27 UTC, stupor_scurvy343
Details

Note You need to log in before you can comment on or make changes to this bug.
Description stupor_scurvy343 2012-05-23 20:35:57 UTC
Using latest SVN, Okteta fails two tests.

Reproducible: Always

Steps to Reproduce:
1. cmake . -DKDE4_BUILD_TESTS=true
2. make -j5
3. ctest
Actual Results:  
The following tests FAILED:
         13 - libpiecetable-grouppiecetablechangeabstractpiecetablechangeiftest (Failed)
         47 - basic-datainformation-test (Failed)

Expected Results:  
All tests pass.
Comment 1 stupor_scurvy343 2012-05-23 20:36:36 UTC
Created attachment 71329 [details]
LastTest.log
Comment 2 Friedrich W. H. Kossebau 2012-05-23 20:51:00 UTC
Hi Michael, thanks for the report.

libpiecetable-grouppiecetablechangeabstractpiecetablechangeiftest is actually known to fail, I should finally use QFAIL with it. Will do tonight.

basic-datainformation-test, that one is for Alex, his area :) So assigning the bug to him already.
But I have tio add that this test does not fail for me, only libpiecetable-grouppiecetablechangeabstractpiecetablechangeiftest does.
Comment 3 Alex Richardson 2012-05-23 22:36:54 UTC
SVN commit 1296348 by arichardson:

return null when cast fails also in release mode

This fixes basicdatainformationtest when compiled in realease mode.
Typical case of premature optimization. One virtual function call which
just returns true/false + one boolean check will definitely not be a
bottleneck. And since it catches potential programming errors better
leave it like that.


 M  +3 -0      test/basicdatainformationtest.cpp  
 M  +0 -8      view/structures/datatypes/datainformationbase.cpp  
 M  +0 -16     view/structures/datatypes/datainformationbase.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1296348
Comment 4 Friedrich W. H. Kossebau 2012-06-09 15:19:29 UTC
After investigation it seems the reason why libpiecetable-grouppiecetablechangeabstractpiecetablechangeiftest is failing is indeed a bug or at least a structural problem, so that test better continues to fail.

Thus reopening this bug for myself to be remembered to give that problem a shoot soon.
Comment 5 stupor_scurvy343 2012-11-18 14:27:19 UTC
Created attachment 75337 [details]
LastTest.log

As of r1325505, structures-script-classes is now failing.
Comment 6 Alex Richardson 2013-02-14 15:10:40 UTC
Git commit badcd8d7e445cb576a52fabba1a2084977085dd3 by Alex Richardson.
Committed on 14/02/2013 at 16:03.
Pushed by arichardson into branch 'KDE/4.10'.

Fix scriptclasses test

Ensure that mHasBeenUpdated always gets set.
Also handle property type for enums.

M  +14   -7    kasten/controllers/test/scriptclassestest.cpp
M  +4    -0    kasten/controllers/view/structures/script/classes/enumscriptclass.cpp
M  +2    -1    kasten/controllers/view/structures/script/classes/primitivescriptclass.cpp
M  +7    -1    kasten/controllers/view/structures/script/scripthandler.cpp

http://commits.kde.org/okteta/badcd8d7e445cb576a52fabba1a2084977085dd3
Comment 7 Friedrich W. H. Kossebau 2016-01-20 10:24:13 UTC
Closing as resolved as none of the activated tests are failing on KDE CI (and locally for me)