return null when cast fails also in release mode

This fixes basicdatainformationtest when compiled in realease mode.
Typical case of premature optimization. One virtual function call which
just returns true/false + one boolean check will definitely not be a
bottleneck. And since it catches potential programming errors better
leave it like that.

BUG: 300527

svn path=/trunk/KDE/kdesdk/okteta/; revision=1296348